remove unnecessary code